# Splaton-t

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.bat
src/client/: assets.cpp  assets.h  launch_server.cpp  launch_server.h  main.cpp  ui.cpp  ui.h
src/engine/: net.cpp  net.h  sha256.cpp  sha256.h
src/server/: db.cpp  db.h  game.cpp  game.h  main.cpp
src/shared/: defs.h  protocol.h  sim.cpp  sim.h
